fix title wrap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -106,11 +106,10 @@ body {
     }
     .title {
         font-size: 2em;
-    }
-    .snipTitle{
         width: 80%;
         text-overflow: ellipsis;
     }
+
     .description {
         font-size: 1.3em;
         display: block;
